compiler/actonc/test/syntaxerrors/err2.golden
Building file test/syntaxerrors/err2.act using temporary scratch directory

ERROR: Error when compiling err2 module: Context error

   |
15 |   actor a():
   |   ^^^^^
actor declaration only allowed on the module top level

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

